--- a/md/数据结构.md
+++ b/md/数据结构.md
@@ -10,7 +10,7 @@
       - [查看函数中数组的值](#查看函数中数组的值)
       - [删除元素和求特定元素](#删除元素和求特定元素)
       - [进制转换](#进制转换)
-      - [math.h](#mathh)
+      - [log和exp](#log和exp)
       - [选择排序法小简化](#选择排序法小简化)
       - [浅拷贝和深拷贝](#浅拷贝和深拷贝)
       - [获取随机数](#获取随机数)
@@ -18,6 +18,9 @@
     - [算法和算法设计](#算法和算法设计)
       - [算法的特性](#算法的特性)
       - [测量程序运行时间](#测量程序运行时间)
+      - [算法的复杂度(complexity)，度量和问题规模](#算法的复杂度complexity度量和问题规模)
+      - [渐进的时间复杂度](#渐进的时间复杂度)
+      - [markdown 语法](#markdown-语法)
       - [时间复杂度例题](#时间复杂度例题)
         - [循环嵌套](#循环嵌套)
         - [递归，分治](#递归分治)
@@ -81,6 +84,8 @@
       - [分类](#分类)
     - [二叉树的重构和计数](#二叉树的重构和计数)
     - [树与森林](#树与森林)
+  - [树的应用](#树的应用)
+    - [哈夫曼树](#哈夫曼树)
   
 # 数据结构与算法
 
@@ -437,7 +442,7 @@ void SysConvert( string s, int init, int k)
 }
 ```
 
-#### math.h
+#### log和exp
 
 ```cpp
 #include<stdio.h>
@@ -787,7 +792,7 @@ auto duration = end - begin;//auto推断得到的是 nanoseconds
     //auto deration =duration_cast<milliseconds>(end-begin);//强制转换为ms，精度不如上面的方式
     cout << duration.count() <<"ms"<< endl;
     cout<<ms<<"ms"<<endl;
-    ```
+ ```
 
 
 算法的计算量的大小称为算法的*复杂性*。
@@ -889,7 +894,10 @@ $$
 函数或语句嵌套的相乘，并列的取最大。
 
 计算递归的时间复杂度时，简单的可以直接当作for循环来看，复杂的通过递推式计算，结束递归那一步的执行频度如果是c可以简化为1，递推式中的常数必须严格按其执行频度来，例如裴波那契数列递归式是T(n)=T(n-1)+T(n-2)+2(if和return那一句)，n=1,2时看作1还是2无所谓。
-#### [markdown数学公式](https://www.cnblogs.com/wuxero/p/14171220.html)
+
+#### markdown 语法
+
+[markdown数学公式](https://www.cnblogs.com/wuxero/p/14171220.html)
 
 [在线生成](https://latex.codecogs.com/eqneditor/editor.php)
 
@@ -2114,7 +2122,7 @@ $T=\begin{cases}\emptyset,n=0 \\ \{r,T_L,T_R\}\\ \end{cases}$
 
   - 从0开始编号时双亲结点公式用i-1替换，其余用i+1替换，左右对应关系对调；
 
-- 完全二叉树度为1的结点只有0个或1个，当n为奇数时，因为n0+n2是奇数，所以n1=0,此时称为严格(正则)二叉树(结点最少为2h-1,最多为2^h-1),n为偶数时n1=1;$n_0=\lceil n/2\rceil,n_1=\lfloor n/2 \rfloor$，完全二叉树的叶结点数量大于等于非叶结点数量。
+- 完全二叉树度为1的结点只有0个或1个，当n为奇数时，因为n0+n2是奇数，所以n1=0,此时称为严格(正则)二叉树(结点最少为2h-1,最多为2^h-1),n为偶数时n1=1;$n_0=\lceil n/2\rceil,n_1=\lfloor n/2 \rfloor$，**完全二叉树的叶结点数量大于等于非叶结点数量**。
 
 - 有n个结点，高度为n的二叉树的棵数为$2^{n-1}$,每个向下的子女都有两个可能的位置。
   
@@ -2335,3 +2343,67 @@ int main(){
 树的遍历
 
 先根遍历和中根遍历为深度优先遍历，层次序遍历为广度优先遍历。
+
+## 树的应用
+
+### 哈夫曼树
+
+树的路径长度是根结点到每一个结点的路径长度(结点的深度减一)之和
+
+n个二叉树的最小路径长度$PL=\sum_{i=0}^{n-1} \lfloor\log_2{i+1}\rfloor=(n+1)\;\lfloor\log_2n\rfloor-2^{\lfloor\log_2{n+1}\rfloor}+2$,此时二叉树为完全二叉树。
+
+对于一颗已有的二叉树， 如果我们为它添加一系列新结点，使得它原有的所有结点的度都为2，那么我们就得到了一颗扩充二叉树
+
+外结点数 = 内结点数 + 1
+总结点数 = 2 × 外结点数 -1
+
+将权值{w1,w2,...,wn}(wi>=0)分别赋给T的n个叶节点，称T为权值为{w1,w2,...,wn}的扩充二叉树，带有权值的叶节点叫做扩充二叉树的外结点，其余结点叫做内结点。
+
+扩充二叉树的带权路径长度定义为$WPL=\sum_{i=1}^nw_il_i$,WPL最小时即为Huffman树。
+
+带权路径长度最小的扩充二叉树不一定是完全二叉树，权值越大的离根结点越近的是。
+
+Huffman算法(构造huffman树)
+
+构造n个带有权值的结点组成的森林，将权值较小的两棵树合并，合并后的新根的权值为其子女结点权值之和，合并到只剩一棵树，所得的树就是huffman树。
+
+限制外结点大小顺序可得唯一确定的树
+
+```cpp
+//静态三叉链实现
+using DataType = char;
+struct HFNode
+{
+    DataType data;
+    int weight;
+    int parent, lchild, rchild;
+    HFNode(int w = -1, DataType val = 0, int par = -1, int lc = -1, int rc = -1) : weight(w), data(val), parent(par), lchild(lc), rchild(rc)
+    {
+    }
+};
+struct HFTree
+{
+    HFNode *elem;
+    int leafNum, totalNum, root;
+    ~HFTree() { delete elem; }
+};
+```
+
+数组中前n个是外结点，后n-1个是内结点，第2n-2个是根结点，构造的时间复杂度为o(n^2);
+
+最优判定树
+
+用Huffman树建立的成绩查询树的WPL不一定是最优判定树，因为有的内结点判定等同于两次判定，权值会比预期的大。
+
+改进算法与Huffman算法的区别是轮流检查**权值和最小的相邻两树**并进行合并,并且排列时相对顺序不能变化(可以在数组中将合并后的根结点与原左子女的位置交换，将右子女移到交换后左子女的前一个位置，中间部分顺序前移，最终根结点在第一个元素处)，用链式表实现较为容易(静态表子女的位置改变后不能追踪)。
+
+Huffman编码
+
+将二叉树的左分支标记为0，右分支标记为1，从根结点到叶节点的路径唯一的表示了该叶节点的二进制编码。
+
+设计变长编码，为出现概率较低的字符指定较长的码字，为出现概率较大的字符指定较短的码字，可以明显提高传输的平均性能。
+
+前缀性质:任一字符编码都不是其它字符编码的前缀。用二叉树表示可以保证这个性质。
+
+平均编码长度最小的前缀编码称为最优编码，可以通过构造huffman树解决，Huffman树的带权路径长度就是相应编码的平均编码长度，得到的编码称为Huffman编码。
+
