--- a/md/数据结构.md
+++ b/md/数据结构.md
@@ -2169,6 +2169,8 @@ typedef TreeNode *BinTree;
 4 3 2 * * 3 2 * 1 + + 
 ```
 
+特别的，**中序遍历序列就是二叉树在底面的投影**。
+
 非递归实现语句较复杂但时间和空间复杂度会降低(不降低数量级),大体都是先从根结点开始沿着左分支下行，并在栈中记录当前结点位置，最后把控制权交给栈顶右子女将其作为新的根结点，区别在于**访问结点语句的位置和转交控制权语句的位置**，特别的，后序非递归实现时栈内保存的是**某一结点和它任意祖先之间的路径**。
 
 设有n个结点，遍历算法的时间复杂度为O(n)(每个结点只访问一次)，空间复杂度最好为$O(log_2n)$,最差为O(n),递归工作栈最多存放的结点数等于树的高度(单支树等于n)，对于递归算法，每次递归就向下一层，也等于树的高度。
@@ -2189,6 +2191,8 @@ typedef TreeNode *BinTree;
 二叉树的重构:通过二叉树的遍历序列忠实(唯一)地还原出二叉树的拓扑结构.
 
 - (先序||后序)+中序；可以通过数学归纳法证明，重构算法是遍历前序(从前向后)或后序序列(从后往前)，并在中序序列中将遍历到的结点作为根结点将两个序列拆分开(根，左，右)，不断递归进行,中序决定左右子树序列的长度，先序+后序不行是因为归纳证明时若一个子女为空则通过(t,L/R)和(R/L,t)不能确定该子女是左还是右。
+
+- 1，找到当前层序序列中 第一个 出现在当前中序序列的元素 作为根节点root，2，在当前中序序列中找出根节点root的下标k，把当前中序序列划分为\[inL,k-1\]，\[k+1,inR\]，分别是 当前根节点root的 左子树的中序序列，和右子树的中序序列。
 
 - 由完全二叉树的任意一种遍历序列都可以实现二叉树的重构。
 
@@ -2216,6 +2220,29 @@ TreeNode* create(vector<int>& preorder, vector<int>& inorder, int ps, int pe, in
      /*利用中后序构造： node->left = create(inorder, postorder, is, pos - 1, ps, ps + pos - is - 1);  
         node->right = create(inorder, postorder, pos + 1, ie, pe - ie + pos, pe - 1); */
     return node;
+}
+BinTree CreateByInAndLevel(string in, string level, int ie, int is, int ls)
+{
+    if (is > ie)
+        return nullptr;
+    int index = -1;
+    while (index == -1)//找出层次序列中第一个出现在当前中序序列的元素（越过另一子树的元素）
+    {
+        for (size_t i = is; i <= ie; i++)
+        {
+            if (in[i] == level[ls])
+            {
+                index = i;
+                break;
+            }
+        }
+        ls++;
+    }
+    ls--; //多加了一个
+    BinTree root = new TreeNode(level[ls]);
+    root->lchild = CreateByInAndLevel(in, level, index - 1,is, ++ls);
+    root->rchild = CreateByInAndLevel(in, level, ie, index+1, ++ls);
+    return root;
 }
 ```
 
@@ -2406,4 +2433,83 @@ Huffman编码
 前缀性质:任一字符编码都不是其它字符编码的前缀。用二叉树表示可以保证这个性质。
 
 平均编码长度最小的前缀编码称为最优编码，可以通过构造huffman树解决，Huffman树的带权路径长度就是相应编码的平均编码长度，得到的编码称为Huffman编码。
+
+```cpp
+ double weight[LEAF_NUM] = {0.05, 0.1, 0.1, 0.05, 0.3, 0.1, 0.1, 0.1, 0.05, 0.05};
+DataType val[LEAF_NUM * 2 - 1] = {'a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j'};
+a:0110
+b:1110
+c:1111
+d:0111
+e:10
+f:000
+g:001
+h:010
+i:1100
+j:1101
+averageCodingLength is:3.1
+```
+
+二叉搜索树
+
+性质：
+
+- 每个结点都有作为查找依据的关键码(key)，所有结点的关键码互不相同(简化)；
+
+- 非空左子树上所有结点的关键码都小于根结点的关键码；
+
+- 非空右子树上所有结点的关键码都大于根结点的关键码；
+
+- 左子树和右子树也是二叉搜索树；
+
+- 中序遍历时各结点的关键码按从小到大的顺序排列。
+
+  - 微观上处处满足顺序性
+
+  - 整体上满足单调性
+
+为提高算法可读性一般不设关键码项，直接用数据值进行比较，相当于有限制的二叉树；
+
+```cpp
+//验证二叉搜索树
+//算法1
+    long long pre = LLONG_MIN;//要比所有int小，保证第一次的比较恒成立
+    bool isValidBST(TreeNode *root)
+    { //中序遍历
+        if (!root)
+            return true;
+
+        if (!isValidBST(root->left))
+            return false;
+
+        if (root->val <= pre) //二叉搜索树「中序遍历」得到的值构成的序列一定是升序的
+            return false;
+        pre = root->val;
+        if (!isValidBST(root->right))
+            return false;
+        return true;
+    }
+    //算法2
+ bool isValidBST(TreeNode *root)
+    {
+        return isValid(root, NULL, NULL); //使用指针可以避免边界值的影响，NULL替代绝对的最值，保证最初的比较
+    }
+
+    bool isValid(TreeNode *root, int *lower, int *upper)//lower和upper都是来源于父节点，只能用来判假，不能判真
+    {
+        if (!root)
+            return true;
+        if (upper && root->val >= *upper)
+            return false;
+        if (lower && root->val <= *lower)
+            return false;
+        return isValid(root->left, lower, &(root->val)) && isValid(root->right, &(root->val), upper);
+    }
+```
+
+查找的行为类似与二分查找，查找的比较次数不超过高度h;
+
+查找算法决定了能否进行插入删除操作并提供了进行插入删除时所需的目标位置的位置信息(父节点)。
+
+删除操作在目标结点有左右子女的情况下复杂度最高，但也是O(h);
 
