--- a/md/数据结构.md
+++ b/md/数据结构.md
@@ -86,6 +86,8 @@
     - [树与森林](#树与森林)
   - [树的应用](#树的应用)
     - [哈夫曼树](#哈夫曼树)
+    - [二叉搜索树](#二叉搜索树)
+    - [AVL树](#avl树)
   
 # 数据结构与算法
 
@@ -314,6 +316,7 @@ for(int j = 0; j <2;j++)//逐层由内向外释放
         //初始化分配的内存,设置为0
         void *memset(void *s, int ch, size_t n);
         //将s中当前位置后面的n个字节 （typedef unsigned int size_t ）用 ch 替换并返回 s 。
+        //memset函数按字节对内存块进行初始化，所以不能用它将int数组初始化为0和-1之外的其他值（除非该值高字节和低字节相同）。
 ```
 
 calloc相当于malloc加memset;
@@ -330,7 +333,7 @@ calloc相当于malloc加memset;
 
 #### 查看函数中数组的值
 
-1，\*(type(\*)\[len\])arrname;强制转换为数组指针（它的最本质类型），再取值。
+1，\*(type(\*)\[len])arrname;强制转换为数组指针（它的最本质类型），再取值。
 
 2,*(arrname)@len;用这个简单。
 
@@ -1731,7 +1734,7 @@ class SeqStack
 
   - if icp(ch)<isp(op),退栈赋给结果串；
   
-  - if icp(ch)==isp(op),退栈，没到结尾就读入下一个字符；
+  - if icp(ch)==isp(op),退栈，如果没到结尾就读入下一个字符；
 
 ##### 计算后缀表达式
 
@@ -2052,7 +2055,7 @@ class PolyNode
 
 #### 树的基本术语
 
-结点，结点的度(子树棵数)，叶结点(度为0的结点)，分支结点(度不为0)，子女结点，双亲结点，兄弟结点，祖先结点(由根结点到该结点路径上的所有结点(一般指真祖先)，子孙(后裔)结点(一般指真子孙)，结点间的路径，结点的深度(结点所属层次,以最上为基准)，结点的高度(叶结点的高度为1，非叶节点的高度等于它子女结点高度中的最大值加一，以最下为基准)，树的深度(距离根结点最远的结点所处层次)，数的高度(等于根结点的高度,值与树的深度相等)，树的宽度(每一层结点个数的最大值)，树的度(树中结点的度的最大值，度为n就是n叉数)，有序树(各棵子树次序是定的)，无序树(子树次序不定)，森林(是m,m>=0棵树的集合，删去一棵树的根结点，树就变成森林(森林可能为空),反之，将几棵树连接到一个根结点，树就变成森林)；
+结点，结点的度(子树棵数)，叶结点(度为0的结点)，分支结点(度不为0)，子女结点，双亲结点，兄弟结点，祖先结点(由根结点到该结点路径上的所有结点(一般指真祖先)，子孙(后裔)结点(一般指真子孙)，结点间的路径，结点的深度(结点所属层次,以最上为基准)，结点的高度(叶结点的高度为1，有的教材定义为0，非叶节点的高度等于它子女结点高度中的最大值加一，以最下为基准)，树的深度(距离根结点最远的结点所处层次)，数的高度(等于根结点的高度,值与树的深度相等)，树的宽度(每一层结点个数的最大值)，树的度(树中结点的度的最大值，度为n就是n叉数)，有序树(各棵子树次序是定的)，无序树(子树次序不定)，森林(是m,m>=0棵树的集合，删去一棵树的根结点，树就变成森林(森林可能为空),反之，将几棵树连接到一个根结点，树就变成森林)；
 
 一些结论:
 
@@ -2192,7 +2195,7 @@ typedef TreeNode *BinTree;
 
 - (先序||后序)+中序；可以通过数学归纳法证明，重构算法是遍历前序(从前向后)或后序序列(从后往前)，并在中序序列中将遍历到的结点作为根结点将两个序列拆分开(根，左，右)，不断递归进行,中序决定左右子树序列的长度，先序+后序不行是因为归纳证明时若一个子女为空则通过(t,L/R)和(R/L,t)不能确定该子女是左还是右。
 
-- 1，找到当前层序序列中 第一个 出现在当前中序序列的元素 作为根节点root，2，在当前中序序列中找出根节点root的下标k，把当前中序序列划分为\[inL,k-1\]，\[k+1,inR\]，分别是 当前根节点root的 左子树的中序序列，和右子树的中序序列。
+- 1，找到当前层序序列中 第一个 出现在当前中序序列的元素 作为根节点root，2，在当前中序序列中找出根节点root的下标k，把当前中序序列划分为\[inL,k-1]，\[k+1,inR]，分别是 当前根节点root的 左子树的中序序列，和右子树的中序序列。
 
 - 由完全二叉树的任意一种遍历序列都可以实现二叉树的重构。
 
@@ -2450,7 +2453,7 @@ j:1101
 averageCodingLength is:3.1
 ```
 
-二叉搜索树
+### 二叉搜索树
 
 性质：
 
@@ -2507,9 +2510,260 @@ averageCodingLength is:3.1
     }
 ```
 
-查找的行为类似与二分查找，查找的比较次数不超过高度h;
+查找的行为类似与二分查找，查找的比较次数不超过高度h，最好logn,最坏n;
 
 查找算法决定了能否进行插入删除操作并提供了进行插入删除时所需的目标位置的位置信息(父节点)。
 
 删除操作在目标结点有左右子女的情况下复杂度最高，但也是O(h);
 
+```cpp
+bool deleteBSNode(BSTree root, BSTDataType x)
+{
+    BSTree father, cur, p;
+    if (!(cur = search(root, x, father)))
+        return false;
+    if (cur->lchild && cur->rchild) //寻找中序直接后继(右子树里的最左端)，并对调数据，使情况归于travial,father记录父结点
+    {
+        p = cur->rchild;
+        father = cur;
+        while (p->lchild)
+        {
+            father = p;
+            p = p->lchild;
+        }
+       cur->data=p->data;//更换被删节点原位置的值为其后继的值，注意不能改变p的值，因为最后要判别方向
+        cur = p;//将cur移到待删处
+    }
+    p = cur->lchild ? cur->lchild : cur->rchild; //p为将要被链接的结点，cur至多有一个子树
+    if (!father)                                 //被删的为根结点
+        root = p;
+    else //p是否存在都要链接，不存在时父节点要置空
+        cur->data < father->data ? father->lchild = p : father->rchild = p;
+    delete cur;
+    cur=nullptr;
+    return true;
+}
+```
+
+二叉搜索树的性能分析
+
+固定中序序列可构成的不同二叉搜索树的个数为卡特兰数，可以用树的平均查找长度来衡量它们 。
+
+中序序列相同而拓扑结构不同的二叉树为一个等价类
+
+将原二叉搜索树的结点结点看做内结点，扩充得到扩充二叉树；
+
+内结点树为n时，外结点树为n+1;用I表示所有内结点的路径长度之和，E表示所有外结点的路径长度之和，则有$E=I+2n$,
+每个内结点为外结点贡献两个单位路径长度(左子树一个，右子树一个)。
+
+对扩充二叉树进行中序遍历的结果中内结点与外结点交替排列，每个内结点都在两个外结点之间。
+
+定义查找成功的平均查找长度为$ASL_{成功}=\sum_{i=1}^np[i]l[i]$,L\[i]是第i个内结点的层次号，等于找到该结点的关键码比较次数，p\[i]为结点查找概率；
+
+查找不成功的平均查找长度为$ASL_{不成功}=\sum_{i=0}^nq[j](l'[j]-1)$，$l'[j]$为外结点层次号，减一为关键码平均比较次数。
+
+所有结点的概率之和为1，两个公式之和即为扩充二叉树的平均查找长度ASL
+
+各结点概率不相等情形下类似Huffman树，区别是还要计算内结点概率
+
+相等查找概率情形下高度最小的扩充二叉树的平均查找长度最短，称为最优二叉搜索树，其平均查找长度公式为
+
+$$ASL_{成功}=\sum_{i=1}^n(\lfloor\log_2i\rfloor+1),ASL_{不成功}=\sum_{i=n+1}^{2n+1}\lfloor\log_2i\rfloor$$
+
+随机情况下二叉搜索树的查插删操作的平均时间复杂度为$O(\log_2n)$
+
+### AVL树
+
+AVL树是一种高度平衡二叉树(BBST);
+
+定义:所有结点的左子树和右子树的高度之差的绝对值不超过1
+
+平衡因子(balence factor):左子树高度减去右子树高度
+
+```cpp
+struct AVLNode
+{
+    AVLDataType data;
+    AVLNode *lchild, *rchild, *parent;
+    int height; //此信息更为有用，替代需要通过高度计算的平衡因子,初高为1
+    AVLNode(AVLDataType _data = 0, AVLNode *_parent = nullptr, AVLNode *_lchild = nullptr, AVLNode *_rchild = nullptr, int _height = 1) : data(_data), parent(_parent), lchild(_lchild), rchild(_rchild), height(_height) {}
+};
+using AVLTree = AVLNode *;
+```
+
+插入操作：
+
+插入一个结点，其所有祖先都有可能会失衡
+
+平衡化旋转：从插入位置向上回溯直到发现不平衡的结点，从发生不平衡的结点起，沿回溯的路径取下两层的结点(**沿高度更高的子树路径**)，如果这3个结点位于同一条直线上，则采用单旋转进行平衡化，否则用双旋转；
+
+单旋转分为左单旋转和右单旋转
+
+左单旋转又称RR旋转(根据三个结点向下的路径,**与其名称中的左相反**)，用于在结点的右子树的右子树上插入新结点导致不平衡的情况，具体是回溯找到不平衡结点(此结点**原本的平衡因子为-1**，插入的结点使其变为-2，此子树称为**最小不平衡子树**)，**考虑两个结点**，以此结点的右子女为旋转轴**逆时针**旋转使此结点成为其右子女的左子女，并使原来右子女的左子女成为此结点的右子女,使子树的高度恢复插入前的状态；
+
+对称可得右单旋转(LL旋转)的定义(最小不平衡子树的平衡因子因插入从1变为2，通过旋转使其恢复1)
+
+双旋转分为先左后右旋转(LR)和先右后左(RL)旋转(**与名称方向一致**)；
+
+先左后右旋转(不平衡结点的**平衡因子为1**，在其左子树的右子树上插入结点导致平衡因子变为2)，**考虑三个结点**，具体是以最下层的结点为旋转轴先进行一次左单旋转将其双亲结点(中间位置的结点)旋转下去，再进行一次右旋转将其新的双亲结点(最上层的结点)旋转下去；
+
+对称可得先右后左旋转的定义；
+
+插入具体算法:
+
+- 调用普通BST的插入函数获取父结点(插入函数较简单，且普通插入函数可能没有链接父结点的功能，故可以直接实现)
+  为空即返回
+
+- 从新插入结点的**双亲开始**向上回溯
+
+- bf=0/1/-1:依然平衡，不做额外操作,继续回溯；
+
+- bf=2/-2:
+  
+  -- bf=2:若左子女的bf也为正进行LL旋转，否则进行LR旋转；
+
+  -- bf=-2;若右子女的bf也为负进行RR旋转，否则进行RL旋转。
+
+  -- 具体实现可以从此结点沿更高的子树向下行进两层，将该节点传入平衡操作函数，操作函数可根据此结点找到其父结点
+  与祖父结点，进而根据它们的关系进行旋转
+
+- 若不需要进行平衡操作则**更新结点的高度**并继续回溯
+
+- 最小不平衡子树高度恢复，祖先状态自动恢复，无须继续回溯。
+
+3+4重构：将回溯所得的三个结点从上到下命名为g,p,v,以这三个结点为界将原先g对应的子树按中序遍历序列拆分得到四棵子树(T0,T1,T2,T2),再将四棵子树按照原顺序链接在中序序列中位于两侧的结点，再将这两个结点作为**最中间结点(单旋为p,双旋为v)**的子女，此结点作为新子树的根，这样不会改变中序遍历序列并且四棵子树的高度差不会超过1，组装所得的就是是AVL树，涵盖了所有的单旋和双旋情况。
+
+只要按顺序传入三个结点及四个对应的子树就可用通用的算法重构得到平衡的AVL树。
+
+```cpp
+bool insert(AVLTree &root, AVLDataType x)
+{
+    AVLTree cur, father;
+    if (search(root, x, father))
+        return false;
+    cur = new AVLNode(x, father); //注意与父结点链接
+    if (isRoot(cur))              //空树则将当前结点作为根
+        root = cur;
+    else
+        x < father->data ? father->lchild = cur : father->rchild = cur;
+    for (AVLTree p = father; p; p = p->parent) //平衡化
+    {
+        if (abs(getHeight(p->lchild) - getHeight(p->rchild)) >= 2)
+        { //p的父结点与旋转后的子树链接,根结点直接修改
+            if (isRoot(p))
+                root = rotate(tallerChild(tallerChild(p)));
+            else
+            { //旋转会修改p，需要保存其父结点
+                AVLTree par = p->parent;
+                isLchild(p) ? par->lchild = rotate(tallerChild(tallerChild(p))) : par->rchild = rotate(tallerChild(tallerChild(p)));
+            }
+            break; //旋转后即可退出
+        }
+        else
+            updateHeight(p); //更新回溯路径上的高度
+    }
+    return true;
+}
+
+AVLTree rotate(AVLTree v)
+{
+    if (!v)
+        exit(1);
+    AVLTree p = v->parent, g = p->parent; //父结点和祖父节点
+    //判断类型,按中序序列传入参数
+    if (isLchild(p))
+    {
+        if (isLchild(v)) //LL
+        {
+            p->parent = g->parent; //顶部交接
+            return connect34(v, p, g, v->lchild, v->rchild, p->rchild, g->rchild);
+        }
+        else //LR
+        {
+            v->parent = g->parent;
+            return connect34(p, v, g, p->lchild, v->lchild, v->rchild, g->rchild);
+        }
+    }
+    else
+    {
+        if (isRchild(v)) //RR
+        {
+            p->parent = g->parent;
+            return connect34(g, p, v, g->lchild, p->lchild, v->lchild, v->rchild);
+        }
+        else //RL
+        {
+            v->parent = g->parent;
+            return connect34(g, v, p, g->lchild, v->lchild, v->rchild, p->rchild);
+        }
+    }
+}
+AVLTree connect34(AVLTree a, AVLTree b, AVLTree c, AVLTree T0, AVLTree T1, AVLTree T2, AVLTree T3)
+{
+    //注意更新高度
+    a->lchild = T0;
+    if (T0)
+        T0->parent = a;
+    a->rchild = T1;
+    if (T1)
+        T1->parent = a;
+    updateHeight(a);
+    c->lchild = T2;
+    if (T2)
+        T2->parent = c;
+    c->rchild = T3;
+    if (T3)
+        T3->parent = c;
+    updateHeight(c);
+    b->lchild = a;
+    a->parent = b;
+    b->rchild = c;
+    c->parent = b;
+    updateHeight(b);
+    return b;
+}
+```
+
+删除操作：
+
+删除一个结点会可能导致一个子树失衡，但复衡的后子树高度如果降低可能会导致其祖先的失衡，开销较插入更大
+
+具体算法:
+
+- 调用普通的BST删除，获取目标位置父结点，为空则返回
+  
+- 然后进行复衡与更新高度直到根结点
+
+- 旋转类型类似插入时，使用3+4重构更为简洁
+
+```cpp
+bool remove(AVLTree &root, AVLDataType x)
+{
+    if (!root)
+        return false;
+    AVLTree p = deleteNode(root, x); //获取被删结点的父结点
+    if (!root)                       //删除的为根结点
+        return true;
+    if (!p) //删除失败
+        return false;
+    while (p)
+    {
+        if (abs(getHeight(p->lchild) - getHeight(p->rchild)) >= 2)
+        {
+            if (isRoot(p))
+                p = root = rotate(tallerChild(tallerChild(p)));
+            else
+            {
+                AVLTree par;
+                par = p->parent;
+                p = isLchild(p) ? par->lchild = rotate(tallerChild(tallerChild(p))) : par->rchild = rotate(tallerChild(tallerChild(p)));
+            }
+        }
+        updateHeight(p); //需做O(logn)次调整,极端情况是每次上溯都要调整，无论是否做过调整，树高度均可能降低
+        p = p->parent;
+    }
+    return true;
+}
+```
+
+性能分析
