--- a/md/数据结构.md
+++ b/md/数据结构.md
@@ -88,6 +88,12 @@
     - [哈夫曼树](#哈夫曼树)
     - [二叉搜索树](#二叉搜索树)
     - [AVL树](#avl树)
+    - [八皇后](#八皇后)
+    - [等价关系与并查集](#等价关系与并查集)
+    - [求幂集](#求幂集)
+  - [图](#图)
+    - [基本定义](#基本定义)
+    - [图的表示](#图的表示)
   
 # 数据结构与算法
 
@@ -916,7 +922,7 @@ $$
 自适应括号\left( \right)
 \sqrt{}
 大于等于：\geq;
-
+属于 \in 
 小于等于：\leq; 
 不等于：\neq;
 $\lfloor x \rfloor$向下取整；
@@ -925,6 +931,8 @@ $\lceil x \rceil$向上取整
 行内:一个\$,或**ctrlM**行外两个\$,
 
 有两种省略号，\ldots 表示语文本底线对其的省略号，\cdots表示与文本中线对其的省略号。
+
+\cap:∩ \bigcap \cup ∪  $
 
 ```
 
@@ -2767,3 +2775,370 @@ bool remove(AVLTree &root, AVLDataType x)
 ```
 
 性能分析
+
+设$N_h$是高度为h的AVL树的最小结点树，根据平衡条件，在最差情况下，根的一棵子树的高度为h-1,另一棵的高度为h-2,这两个子树也是高度平衡的，因此有$N_0=0,N_1=1$,$N_h=N_{h-1}+N_{h-2}+1,h>1$.
+
+对于$h\geq1,有N_h=F_{n+2}-1$,经过推导可得，$h<1.44\log_2(N_h+2)-0.327$
+
+所以AVL树的最大高度相当于斐波那契树的情形，最小高度相当于完全二叉树的情形
+
+优点:
+
+各种操作的时间复杂度最坏是O(logn),空间复杂度为O(n);
+
+缺点:
+
+需借助高度或平衡因子，需要改造或额外封装数据元素
+
+插删操作特别是删除操作成本不菲
+
+单次动态调整后，全树拓扑结构的变化量可能高达O(logn);
+
+### 八皇后
+
+```cpp
+//利用递归实现回溯，类似通配符匹配
+class Solution
+{
+public:
+    vector<vector<string>> solveNQueens(int n)
+    {
+        vector<string> chess(n, string(n, '.'));
+        vector<vector<string>> ans;
+        helper(chess, ans, 0, n);
+        return ans;
+    }
+
+private:
+    void helper(vector<string> chess, vector<vector<string>> &ans, int k, int n)
+    {
+        bool attack;
+        if (k <= n)
+        {
+            for (int i = 0; i < n; i++)
+            {
+                chess[k][i] = 'Q'; //放置皇后
+                attack = false;
+                for (int j = 0; j < k; j++) //与前k-1行比较判断是否被攻击
+                    if (chess[k] == chess[j] || abs(k - j) == abs((int)chess[j].find_first_of('Q') - (int)chess[k].find_first_of('Q')))
+                    {
+                        attack = true;
+                        break;
+                    }
+                if (attack == false)
+                    if (k == n-1)//!
+                        ans.emplace_back(chess);
+                    else
+                    {
+                        helper(chess, ans, k + 1, n);
+                    }
+                chess[k][i] = '.'; //复位本行棋盘,选择下一列
+            }
+        }   
+    }
+};
+输入：n = 4
+输出：[[".Q..","...Q","Q...","..Q."],["..Q.","Q...","...Q",".Q.."]]
+```
+
+### 等价关系与并查集
+
+定义在集合A上的关系叫做等价关系，如果它是自反的，对称的和传递的。
+
+设R是定义在集合A上的等价关系，与A中的一个元素a有关系的所有元素的集合叫做a的等价类。代表元为a的A上的关于R的等价类记作$[a]_R$,只考虑一个关系时可省去下标。
+
+模m同余关系的等价类叫作模m同余类，整数a的模m同余类满足$[a]_m=\{\cdots,a-2m,a-m,a,a+m,a+2m,\cdots\}$
+
+设R是定义在集合A上的等价关系，下面的关于集合A中a,b两个元素的命题是等价的：
+
+- aRb
+
+- $[a]=[b]$
+
+- $[a]\cap[b]=\varnothing$
+
+等价类构成一个划分(非空，无交，覆盖)
+
+由等价类可以得到一个划分(将划分中的每一个子集作为一个等价类)，由一个划分也可以得到一个等价类(讲一个等价类(通常是一组有序对)中有关系的有序对中的元素作为划分子集)
+
+A={1，2，3，4}，由等价关系R={(1,1),(1,2),(1,3),(2,1),(2,2),(2,3),(3,1),(3,2),(3,3),(4,4)}得到的一个划分为P1={1,2,3},P2={4};因为R(1)=R(2)=R(3)={1,2,3},R(4)={4};
+
+以余数相等作为等价关系可得到m个不同的模m同余类，它们构成了整数集合的划分
+
+集合上的等价关系数等于划分数
+
+含有n个元素的集合的划分数$S(n)=\sum_{i=1}^nS(n,k),S(n,k)$表示将集合划分为k个子集的划分数
+
+$S(n,k)=S(n-1,k-1)+k*S(n-1,k),1\leq k \leq n$
+
+不能把n个元素不放进任何一个集合中去，即k=0时，S（n，k）=0；也不可能在不允许空盒的情况下把n个元素放进多于n的k个集合中去，即k>n时，S（n，k）=0；再者，把n个元素放进一个集合或把n个元素放进n个集合，方案数显然都是1。
+
+对于任一个元素an，则必然出现以下两种情况：
+
+1.{an}是k个子集中的一个，于是我们只要把a1，a2，......，an-1划分为k-1个子集，便解决了本题，这种情况下的划分数共有S（n-1,k-1）个；
+2.{an}不是k个子集中的一个，则an必与其他的元素构成一个子集。则问题相当于先把a1，a2，......，an-1划分成k个子集，这种情况下划分数共有S（n-1，k）；然后再把元素an加入到k个子集中的任一个中去，共有k中加入方式，这样对于an的每一种加入方式，都可以使集合划分为k个子集，因此根据乘法原理，划分数共有k*S（n-1，k）个。
+
+并查集(UnionFindSet)
+
+```cpp
+struct UFSets
+{
+private:
+    vector<int> fa;
+    Timer timer;
+public:
+    size_t size() { return fa.size(); }
+    UFSets(size_t size = SIZE)
+    {
+        fa.assign(size, -1); //初始各成一派，都是集合(根)，fa[root]的相反数为其集合中元素个数
+    }
+    size_t find(size_t x) //查找根(等价类代表元),同时实现路径压缩,将沿途结点指向根结点，减少重复查找所需时间
+    {
+        return fa[x] < 0 ? x : (fa[x] = find(fa[x]));
+    }
+    void merge(size_t x, size_t y) //合并在元素较多集合上，防止树发生退化(高度过高)
+    {
+        if (x != y)
+        {
+            int setx = find(x), sety = find(y); //找到所属集合
+            int sum = fa[setx] + fa[sety];
+            //根结点fa为负值，越小元素数越多
+            fa[setx] < fa[sety] ? (fa[sety] = setx, fa[setx] = sum) : (fa[setx] = sety, fa[sety] = sum);
+        }
+    }
+    void initByOrderedPair(vector<pair<int, int>> &pairs) //通过有序关系对初始化
+    {
+        for (int i = 0; i < pairs.size(); i++)
+            merge(pairs[i].first, pairs[i].second);
+    }
+    vector<string> divide() //划分获得等价类
+    {
+        vector<string> result;
+        string set;
+        for (size_t i = 0; i < fa.size(); i++)
+        {
+            if (fa[i] < 0)
+            {
+                for (int j = 0; j < fa.size(); j++)
+                {
+                    if (find(j) == i) //将满足等价关系的元素放进字符串(不是所有路径都压缩过，不能直接用父亲判断)
+                        set += to_string(j) + ",";
+                }
+                set.pop_back(); //吐出最后一个逗号
+                result.emplace_back(set);
+                set.clear();
+            }
+        }
+        return result;
+    }
+    /*
+    size_t find(size_t x)
+    {
+        while (fa[x] >= 0)
+            x = fa[x];
+        return x;
+    }
+    void merge(size_t x, size_t y) //合并在x根上
+    {
+        if (x != y)
+            fa[x] += fa[y];
+        fa[y] = x; //y指向x
+    }*/
+};
+```
+
+查找操作的复杂度不超过树高，合并复杂度取决于查找；在一定范围内查找次数越多被压缩的路径越多复杂度越低
+
+### 求幂集
+
+1，递归，dfs，在某个路口分为取和舍两路
+
+2，求(0,1)向量的n(元素个数)次笛卡尔积,所得的序列对应每个元素的取舍，可以循环，也可以用法1求笛卡尔积序列。
+
+```cpp
+#include <iostream>
+#include <vector>
+#include <cmath>
+using namespace std;
+void getPower(vector<string> &loc, string res, vector<int> set, size_t index)
+{
+    if (index == set.size())
+    {
+        if (res.back() == ',')
+            res.pop_back();
+        res += "]";
+        loc.emplace_back(res);
+        return;
+    }
+    getPower(loc, res, set, index + 1); //不选
+    res += to_string(set[index]) + ','; //选
+    getPower(loc, res, set, index + 1);
+}
+vector<string> cartesianProduct(vector<string> setx, vector<string> sety) //求两个集合的笛卡尔积，元素类型为string
+{
+    vector<string> ans(setx.size() * sety.size());
+    size_t t = 0;
+    for (auto x : setx)
+        for (auto y : sety)
+            ans[t++] += (x + y);
+    return ans;
+}
+vector<string> cartesianProduct(vector<string> set, int n) //就一个集合的笛卡尔幂
+{
+    vector<string> ans = set;
+    ans.reserve(pow(set.size(), n));
+    n--;
+    while (n--) //作n-1次笛卡尔积
+        ans = cartesianProduct(ans, set);
+    return ans;
+}
+int main()
+{
+    vector<int> set = {1, 2, 3};
+    vector<string> loc;
+    loc.reserve(pow(2, set.size()));
+    string res{"["};
+    getPower(loc, res, set, 0);
+    for (auto i : loc)
+        cout << i << endl;
+    cout << endl;
+    vector<string> Set = {"0", "1"}, ans(pow(2, set.size()));
+    ans = cartesianProduct(Set, set.size());
+    for (auto i : ans)
+        cout << i << endl;
+    cout << endl;
+    for (auto i : ans)
+    {
+        for (size_t j = 0; j < set.size(); j++)
+            if (i[j] - '0')
+                cout << set[j];
+        cout << endl;
+    }
+}
+运行结果:
+[]
+[3]
+[2]
+[2,3]
+[1]
+[1,3]
+[1,2]
+[1,2,3]
+
+000
+001
+010
+011
+100
+101
+110
+111
+
+
+3
+2
+23
+1
+13
+12
+123
+```
+
+## 图
+
+### 基本定义
+
+G(V,E):G:图名，V:点集，G:边集
+
+| 类型 | 边 | 允许多重边 | 允许环 |
+| -----|-----|-----|--------  |
+| 简单图 | 无向 | 否 | 否 |
+| 多重图 | 无向 | 是 | 否 |
+| 伪图(基本无向图) | 无向 | 是 | 是 |
+| 有向简单图 | 有向 | 否 | 否 |
+| 有向多重图 | 有向 | 是 | 是 |
+| 混合图 | 有向和无向 | 是 | 是 |
+
+握手定理:
+
+- 无向图：$2m=\sum_{v\in V}deg(v)$
+
+- 有向图：$\sum_{v\in V}deg^-(v)=\sum_{v\in V}deg^+(v)=|E|$
+
+无向图有偶数个度为奇数的结点，即奇顶点总是成对出现
+
+几类简单图:完全图$K_n$,圈图$C_n(n\geq 3)$,轮图$W_n$:圈图添加一个顶点和若干边而成，n立方体图$Q_n$:用顶点表示$2^n$个长度为n的位串的图。
+
+无向完全图有$\sum_{i=0}^{n-1}=\frac{n(n-1)}{2}$条边，乘二即为有向完全图的边数
+
+二分图:图的顶点分为两个不相交的子集，每条边连接不同子集的顶点，一个简单图是二分图当且仅当能够对图中的每对顶点赋予不同的颜色并使得没有两个相邻的顶点被赋予同一种颜色，此时两种颜色的顶点对应两个集合，任意两个不同子集的顶点都邻接时为完全二分图$K_{m,n}$
+
+匹配：在简单集G(V,E)中的一个匹配M就是边集E的子集，且该子集中没有两条边关联了相同的顶点；包含最多边数的匹配称为最大匹配
+
+在二分图中，若|M|=|V1|,则称M(边集合)是从V1到V2的完全匹配，此时必然有|V1|<=|N(V1)|=|V2|,V1的任意子集A也满足，即|N(A)|>=|A|(N(A)表示A的**邻接顶点**集合),即为**霍尔婚姻定理**,是存在完全匹配的充要条件
+
+导出子图:包含子图顶点在原图中的所有对应边的子图
+
+并图，补图类似并集补集
+
+连通关系是一个顶点集合上的**等价关系**，将顶点划分为等价类，称为连通分支(连通子图)
+
+两个顶点间有路径则称两个顶点是连通的，如果图中任意一对顶点都是连通的则称此图是连通图，连通无向图的每一对顶点之间都有**简单通路(无重复边)**，非连通图的极大连通子图叫做连通分量，连通图只有它本身一个连通分支。
+
+**没有重复点的通路为初级通路**，初级通路一定是简单通路 。
+
+不连通的图有两个或两个以上不相交的连通子图
+
+有向图中若每对顶点间都有双向的路径，则称此图为强连通图，其极大连通子图为强连通分量
+
+删除割点(关节点)或割边(桥)就会产生更多的连通子图(改变连通性)，在计算机网络的图中它们分别表示最重要的路由器和最重要的链路
+
+max(min\[u,v])叫做图的直径，就是最长的距离，不存在通路时距离定义为无穷
+
+生成树:一个无向连通图的生成树是它的包含每个顶点的极小连通子图
+
+一个无向连通图至少有n-1条边，若刚好有n-1条边时即为生成树
+
+### 图的表示
+
+邻接矩阵表示，类似于关系矩阵，简单图的邻接矩阵是对称的(无向)，并且主对角线上元素都为0(没有环),当为带权图时则将没有关系的位置设为一个max值，有邻接的顶点对应位置即为权值，邻接矩阵也可以表示带环和多重边的图的有向图，元素表示对应顶点间的边数
+
+对于无向图，第i行或第i列元素之和为顶点i的deg
+
+对于有向图，第i行元素之和是顶点i的indeg，第j列元素之和为顶点j的outdeg.
+
+当含有的边数少于超过所有可能的边数的一半时适合用邻接矩阵，否则过于稀疏时适合用邻接表，前者判断边的存在只需一次比较，而后者需要O(|V|)次比较
+
+关联矩阵:横坐标为边，纵坐标为顶点，便于表示多重边和环的无向图
+
+图的同构:设G1=(V1,E1)和G2=(V2,E2)是简单图，若存在双射f使得a和b在G1中相邻当且仅当f(a)和f(b)在图G2中相邻。
+
+顶点数，边数和顶点的度都是在同构下的不变量(必要条件)，但没有已知的用来判断简单图是否同构的不变量集,度为3的顶点和连接它们的边所构成的子图一定是同构的
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
