--- a/md/数据结构.md
+++ b/md/数据结构.md
@@ -94,6 +94,7 @@
   - [图](#图)
     - [基本定义](#基本定义)
     - [图的表示](#图的表示)
+    - [连通性](#连通性)
   
 # 数据结构与算法
 
@@ -3081,27 +3082,11 @@ G(V,E):G:图名，V:点集，G:边集
 
 并图，补图类似并集补集
 
-连通关系是一个顶点集合上的**等价关系**，将顶点划分为等价类，称为连通分支(连通子图)
-
-两个顶点间有路径则称两个顶点是连通的，如果图中任意一对顶点都是连通的则称此图是连通图，连通无向图的每一对顶点之间都有**简单通路(无重复边)**，非连通图的极大连通子图叫做连通分量，连通图只有它本身一个连通分支。
-
-**没有重复点的通路为初级通路**，初级通路一定是简单通路 。
-
-不连通的图有两个或两个以上不相交的连通子图
-
-有向图中若每对顶点间都有双向的路径，则称此图为强连通图，其极大连通子图为强连通分量
-
-删除割点(关节点)或割边(桥)就会产生更多的连通子图(改变连通性)，在计算机网络的图中它们分别表示最重要的路由器和最重要的链路
-
-max(min\[u,v])叫做图的直径，就是最长的距离，不存在通路时距离定义为无穷
-
-生成树:一个无向连通图的生成树是它的包含每个顶点的极小连通子图
-
-一个无向连通图至少有n-1条边，若刚好有n-1条边时即为生成树
-
 ### 图的表示
 
-邻接矩阵表示，类似于关系矩阵，简单图的邻接矩阵是对称的(无向)，并且主对角线上元素都为0(没有环),当为带权图时则将没有关系的位置设为一个max值，有邻接的顶点对应位置即为权值，邻接矩阵也可以表示带环和多重边的图的有向图，元素表示对应顶点间的边数
+邻接矩阵表示，类似于关系矩阵，简单图的邻接矩阵是对称的(无向)，并且主对角线上元素都为0(没有环),当为带权图时则将没有关系的位置设为一个max值(也可以规定权值大于0，将没有关系设为0)，有邻接的顶点对应位置即为权值，邻接矩阵也可以表示带环和多重边的图的有向图，元素表示对应顶点间的边数
+
+本质是边组成的矩阵，可以用元素为边对象指针的矩阵实现，指针为空即为没有关系
 
 对于无向图，第i行或第i列元素之和为顶点i的deg
 
@@ -3111,10 +3096,54 @@ max(min\[u,v])叫做图的直径，就是最长的距离，不存在通路时距
 
 关联矩阵:横坐标为边，纵坐标为顶点，便于表示多重边和环的无向图
 
+### 连通性
+
+连通关系是一个顶点集合上的**等价关系**，将顶点划分为等价类，称为连通分支(连通子图)
+
+两个顶点间有路径则称两个顶点是连通的，如果图中任意一对顶点都是连通的则称此图是连通图，连通无向图的每一对顶点之间都有**简单通路(无重复边)**，非连通图的极大连通子图叫做连通分量，连通图只有它本身一个连通分支。
+
+**没有重复点的通路为初级通路**，初级通路一定是简单通路 。
+
+不连通的图有两个或两个以上不相交的连通子图
+
+有向图中若每对顶点间都有双向的路径，则称此图为强连通图，其极大连通子图为强连通分量,去掉有向性后如果是连通图则为弱连通图
+
+删除割点(关节点)或割边(桥)就会产生更多的连通子图(改变连通性)，在计算机网络的图中它们分别表示最重要的路由器和最重要的链路
+
+删除任意一个结点依然连通的图不含割点，称为不可分割图，比有割点的连通图具有更好的连通性
+
+非完全图的点连通度为点割即中最小的顶点数(使图不连通所需的最少顶点数)，记作k(G),连通图的点连通度定义为n-1,即使连通图变为只含有一个顶点。k(G)越大，连通性越好，不连通图的k(G)为0
+
+类似可得边连通度的定义
+
+点连通度小于等于边连通度小于等于图中最小的度
+
+max(min\[u,v])叫做图的直径，就是最长的距离，不存在通路时距离定义为无穷
+
+生成树:一个无向连通图的生成树是它的包含每个顶点的极小连通子图
+
+一个无向连通图至少有n-1条边，若刚好有n-1条边时即为生成树
+
 图的同构:设G1=(V1,E1)和G2=(V2,E2)是简单图，若存在双射f使得a和b在G1中相邻当且仅当f(a)和f(b)在图G2中相邻。
 
-顶点数，边数和顶点的度都是在同构下的不变量(必要条件)，但没有已知的用来判断简单图是否同构的不变量集,度为3的顶点和连接它们的边所构成的子图一定是同构的
+**顶点数，边数和顶点的度还有特定长度简单回路**都是在同构下的不变量(必要条件)，但没有已知的用来判断简单图是否同构的不变量集,度为3的顶点和连接它们的边所构成的子图一定是同构的
 
+若$A_G=A_H$,其中前者是G的邻接矩阵，后者是H上由G的对应顶点的像标记行和列的矩阵，则f是保持边的，由此得出f是同构，但不能通过f不是同构得到两个图不同构，因为两个图的顶点的另一个对应关系可能同构
+
+沿着经过所有结点并且使得两个图的对应顶点的度都相同的通路前进，可以构造可能的同构，这个过程可以保证它们的邻接矩阵是相同的
+
+根据邻接矩阵计算通路数:
+
+从$v_i$到$v_j$的长度为r的通路数等于$A^r$的第(i,j)项
+
+可以用来求两点间的最短通路数(对应位置第一次非零时的值)
+
+可达矩阵
+
+![a](https://img-blog.csdnimg.cn/20210520195151792.jpg?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl81MjM2NTczMQ==,size_16,color_FFFFFF,t_70)
+
+可达矩阵M=$(A+I)^n=I+A+A^[2]+A^[3]+\dots+A^[n]$
+是0次幂(I:添加自反性)到n次幂(长度为n的路径)的并，由于自反性已经添加，故到n-1次即可，可以用布尔幂，也可以用普通幂然后将结果中的非零元素归1，即为图中邻接关系(A+I)的传递闭包。将Warshall算法的结构与单位阵进行布尔或即为所得
 
 
 
