--- a/md/数据结构.md
+++ b/md/数据结构.md
@@ -95,6 +95,11 @@
     - [基本定义](#基本定义)
     - [图的表示](#图的表示)
     - [连通性](#连通性)
+    - [遍历](#遍历)
+  - [图的应用](#图的应用)
+    - [拓扑排序(Topological sorting)](#拓扑排序topological-sorting)
+    - [连通分量](#连通分量)
+    - [优先级搜索(PFS)](#优先级搜索pfs)
   
 # 数据结构与算法
 
@@ -3051,14 +3056,14 @@ int main()
 
 G(V,E):G:图名，V:点集，G:边集
 
-| 类型 | 边 | 允许多重边 | 允许环 |
-| -----|-----|-----|--------  |
-| 简单图 | 无向 | 否 | 否 |
-| 多重图 | 无向 | 是 | 否 |
-| 伪图(基本无向图) | 无向 | 是 | 是 |
-| 有向简单图 | 有向 | 否 | 否 |
-| 有向多重图 | 有向 | 是 | 是 |
-| 混合图 | 有向和无向 | 是 | 是 |
+| 类型             | 边         | 允许多重边 | 允许环 |
+| ---------------- | ---------- | ---------- | ------ |
+| 简单图           | 无向       | 否         | 否     |
+| 多重图           | 无向       | 是         | 否     |
+| 伪图(基本无向图) | 无向       | 是         | 是     |
+| 有向简单图       | 有向       | 否         | 否     |
+| 有向多重图       | 有向       | 是         | 是     |
+| 混合图           | 有向和无向 | 是         | 是     |
 
 握手定理:
 
@@ -3106,7 +3111,7 @@ G(V,E):G:图名，V:点集，G:边集
 
 不连通的图有两个或两个以上不相交的连通子图
 
-有向图中若每对顶点间都有双向的路径，则称此图为强连通图，其极大连通子图为强连通分量,去掉有向性后如果是连通图则为弱连通图
+有向图中若每对顶点间都有**互相到达的路径**，则称此图为强连通图，其极大连通子图为强连通分量,去掉有向性后如果是连通图则为弱连通图
 
 删除割点(关节点)或割边(桥)就会产生更多的连通子图(改变连通性)，在计算机网络的图中它们分别表示最重要的路由器和最重要的链路
 
@@ -3139,13 +3144,380 @@ max(min\[u,v])叫做图的直径，就是最长的距离，不存在通路时距
 可以用来求两点间的最短通路数(对应位置第一次非零时的值)
 
 可达矩阵
-
 ![a](https://img-blog.csdnimg.cn/20210520195151792.jpg?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl81MjM2NTczMQ==,size_16,color_FFFFFF,t_70)
 
 可达矩阵M=$(A+I)^n=I+A+A^[2]+A^[3]+\dots+A^[n]$
 是0次幂(I:添加自反性)到n次幂(长度为n的路径)的并，由于自反性已经添加，故到n-1次即可，可以用布尔幂，也可以用普通幂然后将结果中的非零元素归1，即为图中邻接关系(A+I)的传递闭包。将Warshall算法的结构与单位阵进行布尔或即为所得
 
+### 遍历
 
+访问数据域是访问的一部分
+
+BFS
+
+```cpp
+template <typename Tv, typename Te>
+void Graph<Tv, Te>::bfs(int s)
+{
+    reset();
+    int v = s;
+    int clock = 0;
+    do//遍历每个不重复的连通域
+    {
+        if (status(v) == UNDISCOVERED)
+            BFS(v, clock);
+    } while (s != (v = (++v % n)));
+}
+
+void Graph<Tv, Te>::BFS(int v, int &clock, vector<Tv> &path)
+{
+    std::queue<int> Q;
+    status(v) = DISCOVERED;
+    dTime(v)=++clock;
+    Q.push(v);
+    while (!Q.empty())
+    {
+        int v = Q.front();
+        Q.pop();
+        path.emplace_back(vertex(v));//访问数据域
+        for (int u = firstNbr(v); u > -1; u = nextNbr(v, u))
+        {
+            if (status(u) == UNDISCOVERED)
+            {
+                status(u) = DISCOVERED;
+                dTime(v) = ++clock; //标记每个顶点被探测的时间(顺序)
+                Q.push(u);
+                type(v, u) = TREE; //引入树边支撑拓展树
+                parent(u) = v;
+            }
+            else
+                type(v, u) = CROSS; //归于跨边(v已被访问或发现)
+        }
+        status(v) = VISITED; //v被访问完毕
+        //访问结束时间fTime与Dtime等价
+    }
+}
+```
+
+连通的无向图一次搜索就可以覆盖全图，有向图查找次数与顶点选取有关
+
+复杂度:邻接表:O(n+e),邻接矩阵O(n^2),考虑到结点数组大概率存储在高速缓存区，实际与邻接表存储的复杂度一致
+
+是树的层序遍历的拓展，所生成的支撑树中的顶点到初始顶点的路径即为两顶点之间的最短路径
+
+DFS
+
+```cpp
+template <typename Tv, typename Te>
+void Graph<Tv, Te>::dfs(int s, vector<Tv> &path)
+{
+    reset();
+    int clock = 0;
+    int v = s;
+    do
+    {
+        if (status(v) == UNDISCOVERED)
+            DFS(v, clock, path);
+    } while (s != (v = (++v % n)));
+}
+template <typename Tv, typename Te>
+void Graph<Tv, Te>::DFS(int v, int &clock, vector<Tv> &path)
+{
+    dTime(v) = ++clock;
+    status(v) = DISCOVERED;
+    path.emplace_back(vertex(v));//访问数据域
+        for (int u = firstNbr(v); u > -1; u = nextNbr(v, u))
+    {
+        switch (status(u))
+        {
+        case UNDISCOVERED: //u尚未发现，意味着支撑树可在此拓展
+            type(v, u) = TREE;
+            parent(u) = v;
+            DFS(u, clock, path);
+            break;
+        case DISCOVERED: //u已被发现但尚未访问完毕，应属被后代指向的祖先
+            type(v, u) = BACKWARD;//每一条BACKWARD的边都代表着一个环(loop)的存在
+            break;
+        default:  //u已访问完毕（VISITED，有向图），则视承袭关系分为前向边(在当前顶点之后是非子女的后代)
+                        //或跨边(在当前顶点之前是表亲)
+            type(v, u) = (dTime(v) < dTime(u)) ? FORWARD : CROSS;
+        }
+    }
+    status(v) = VISITED;//至此，当前顶点v方告访问完毕
+    fTime(v) = ++clock;//访问完毕时间
+}
+```
+
+是树的先序遍历的拓展
+
+括号引理
+
+Parenthesis Lemma:给定有向图G(V,E)及其任意DFS森林，则
+
+$\begin{cases} u是v的祖先->active[u]\supseteq active[v]\\ u是v的子女->active[u]\subseteq active[v]\\ u和v没有直系亲属关系-> active[u]\cap active[v]=\varnothing \end{cases} $
+
+通过这样可以用O(1)的复杂度判断两个顶底是否有直系亲属关系，通过parent域判断需要O(n)的复杂度
+
+## 图的应用
+
+### 拓扑排序(Topological sorting)
+
+构造一个相容的偏序，某个顶点(除最小元)被访问当且仅当小于它的顶点都已被访问
+
+零入度算法:每一步选择极小元(零入度，根)加入结果并删除此顶点,缺点是需要大量的比较和删除操作，复杂度较高,当然实际上可以通过**维护一个入度数组和极小元栈实现**
+
+零出度算法:进行**全图的DFS遍历**，当**顶点是极大元(零出度，叶)或后序顶点都已被访问时(如果删除被访问的顶点，就相当于极大元)**顶点进入排序序列(入栈),出栈的结果即为拓扑排序的序列，即为各顶点回溯顺序的倒序，亦位DFS算法退出递归时输出当前顶点的值所得到的序列**用后序顶点都已被访问作为特征可知fTime越靠后，在拓扑排序中越靠前，fTime从大到小的排列即为结果**，这样可以不用修改或重写原DFS(实际做题需要重写改进,可**依据backtrack的出现(探测但未访问)证明有环**,并在遍历过程中记录回溯顶点)，易知如果遍历起始点为最小元则只须遍历一次
+
+拓扑排序不能排序带环的图(格),而用DFS可以得到结果，但结果不合理，与选取的顶点有关，需要在探测到环时退出排序
+
+```cpp
+void TopologicalSort(vector<Tv> &order) //传入DAG图dfs排序后的序列(或是任意的顶点标签值序列，都要确保先进行dfs），不能辨别带环的图
+    {
+        std::sort(order.begin(), order.end(), [&](Tv a, Tv b)
+                  { return fTime(loc(a)) > fTime(loc(b)); }); //按fTime逆序排列
+    }
+```
+
+判断是否有环
+
+```cpp
+class Solution
+{
+public:
+    bool canFinish(int numCourses, vector<vector<int>> &prerequisites)
+    {
+        neighbors.resize(numCourses);
+        visited.resize(numCourses);
+        visited.assign(numCourses, 0);
+        for (int i = 0; i < prerequisites.size(); i++)
+            neighbors[prerequisites[i][1]].emplace_back(prerequisites[i][0]);
+        flag = true;
+        for (int v = 0; flag && v < numCourses; v++)
+            if (!visited[v])
+                dfs(v);
+        return flag;
+    }
+    vector<vector<int>> neighbors;
+    vector<int> visited;
+    bool flag;
+    void dfs(int v)
+    {
+        if (!flag) //终止
+            return;
+        visited[v] = 1; //探测
+        for (auto i = neighbors[v].begin(); i != neighbors[v].end(); i++)
+        {
+            if (!visited[*i])
+                dfs(*i);
+            else if (visited[*i] == 1) //探测到但未访问完毕是一个回边，代表一个有向环的存在
+                flag = false;
+        }
+        visited[v] = 2; //访问完毕
+    }
+};
+```
+
+### 连通分量
+
+当无向图为连通图时，从某一顶点出发进行DFS所能访问到的所有顶点构成一个连通分量，从所有未被访问顶点出发进行DFS即可得到无向图的所有连通分量
+，连通分量构成一组等价类，所以也可以利用并查集进行计算
+
+去除任一顶点后图任能保持连通的无向图称为双连通图(双向连通图)，任意两个顶点之间存在到达对方的不重合的路径，非双连通图包含多个双连通分量(Biconnected Components)
+
+双连通分量之间通过关节点连接
+
+判断关节点的准则
+
+- 根结点若至少有两个子女则一定是关节点(无向图不会有跨边)
+
+- 叶节点不是关节点(去除不会影响连通状态)
+
+- **内部顶点不是关节点当且仅当它的任一子孙都可以绕过它到达u的某一祖先**，而且u不属于这条路径
+
+有向图的强连通分量类似无向图的双连通分量，可以依据上述的第三条准则为原理的tarjana算法得到强连通分量(strongly connected component (SCC))，也可以得到无向图的双连通分量
+
+tarjan算法计算bcc
+
+```cpp
+template <typename Tv, typename Te>
+void Graph<Tv, Te>::bcc()
+{
+    if (direct == DIRECTED)
+    {
+        cout << "please try scc or scc2" << std::endl;
+        return;
+    }
+    reset();
+    int v = 0;
+    int clock = 0;
+    stack<int> S;
+    while (v != n - 1)
+    {
+        if (status(v) == UNDISCOVERED)
+        {
+            BCC(v, clock, S);
+            S.pop(); //*遍历返回后，弹出栈中最后一个顶点——当前连通域的起点
+        }
+        v++;
+    }
+}
+
+#define hca(x) (fTime(x))           //利用闲置的fTime()充当hca(),highest connnected ancestor
+template <typename Tv, typename Te> //顶点类型、边类型
+void Graph<Tv, Te>::BCC(int v, int &clock, stack<int> &S)
+{
+    hca(v) = dTime(v) = ++clock; //初始的hca是探测时间
+    status(v) = DISCOVERED;
+    S.push(v);
+    for (int u = firstNbr(v); - 1 < u; u = nextNbr(v, u))
+        switch (status(u))
+        { //视u的状态分别处理
+        case UNDISCOVERED:
+            parent(u) = v;
+            type(v, u) = TREE;
+            BCC(u, clock, S); //从顶点u处深入
+            if (hca(v) > hca(u))
+                hca(v) = std::min(hca(v), hca(u)); //更新hca[v]
+            else //子女的hca不可能大于祖先
+            { //*弹出当前BCC中（除关节点v外）的所有节点,v可能是其它连通域的成员，不能退栈
+                cout << vertex(v);//输出关节点
+                while (S.top() != u)//*v,u在栈中不一定连续，要用u作为终止条件
+                {
+                    cout << vertex(S.top());
+                    S.pop();
+                }
+                cout << vertex(S.top()) << std::endl;
+                S.pop();
+            }
+            break;
+        case DISCOVERED: 
+            type(v, u) = BACKWARD;
+            hca(v) = std::min(hca(v), dTime(u)); //更新hca[v]
+            break;
+        default: //VISITED (有向图),与本算法无关
+            type(v, u) = (dTime(v) < dTime(u)) ? FORWARD : CROSS;
+            break;
+        }
+    status(v) = VISITED;
+}
+
+#undef hca
+
+```
+
+tarjan算法计算scc
+
+```cpp
+template <typename Tv, typename Te>
+void Graph<Tv, Te>::scc()
+{
+    if (direct == UNDIRECTED)
+    {
+        cout << "please try dcc" << std::endl;
+        return;
+    }
+    reset();
+    int v = 0;
+    int clock = 0;
+    stack<int> S;
+    while (v != n - 1)
+    {
+        if (status(v) == UNDISCOVERED)
+            SCC(v, clock, S);
+        v++;
+    }
+}
+
+#define hca(x) (fTime(x))           //利用闲置的fTime()充当hca(),highest connnected ancestor
+template <typename Tv, typename Te> //顶点类型、边类型
+void Graph<Tv, Te>::SCC(int v, int &clock, stack<int> &S)
+{
+    hca(v) = dTime(v) = ++clock; //初始的hca是探测时间
+    status(v) = DISCOVERED;
+    S.push(v);
+    for (int u = firstNbr(v); - 1 < u; u = nextNbr(v, u))
+        switch (status(u))
+        { //视u的状态分别处理
+        case UNDISCOVERED:
+            parent(u) = v;
+            type(v, u) = TREE;
+            SCC(u, clock, S);                  //从顶点u处深入
+            hca(v) = std::min(hca(v), hca(u)); //更新hca[v]
+            break;
+        case DISCOVERED: //在栈中
+            type(v, u) = BACKWARD;
+            hca(v) = std::min(hca(v), dTime(u)); //更新hca[v]
+            break;
+        default: //VISITED (有向图),与本算法无关
+            type(v, u) = (dTime(v) < dTime(u)) ? FORWARD : CROSS;
+            break;
+        }
+
+    if (hca(v) == dTime(v))
+    { //输出一个SCC
+        //*弹出当前SCC中（包括桥结点v）的所有节点
+
+        while (v != S.top())
+        {
+            cout << vertex(S.top());
+            status(S.top()) = VISITED; //出栈输出宣告访问结束
+            S.pop();
+        }
+        if (direct == DIRECTED) //v是桥的顶点，归于本强连通域，需要出栈
+        {
+            cout << vertex(S.top()); //输出v
+            status(S.top()) = VISITED;
+            S.pop();
+        }
+        cout << std::endl;
+    }
+}
+#undef hca
+
+```
+
+
+Kosaraju算法计算scc
+
+按顶点回溯顺序的逆序对原图的反向图进行BFS
+
+```cpp
+template <typename Tv, typename Te>
+template <typename T>
+void Graph<Tv, Te>::scc2()
+{
+    if (direct == UNDIRECTED)
+    {
+        cout << "please try dcc" << std::endl;
+        return;
+    }
+    vector<Tv> path;
+    path.reserve(n);
+    dfs(0, path);
+    vector<int> order(n);
+    for (int i = 0; i < n; i++)
+        order[i] = i;
+    std::sort(order.begin(), order.end(), [&](int i, int j) //获得回溯序列的逆序
+              { return fTime(i) > fTime(j); });
+
+    T *G = getRevese<T>();
+    for (int i = 0, clock = 0; i < this->n; i++)
+    {
+        if (G->status(i) == UNDISCOVERED)
+        {
+            path.clear();
+            G->DFS(order[i], clock, path);
+            for (auto i : path)
+                cout << i;
+            cout << std::endl;
+        }
+    }
+    delete G;
+}
+
+```
+
+### 优先级搜索(PFS)
 
 
 
